--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # = Data Source
-spring.datasource.url = jdbc:mysql://10.0.4.217:3306/testdb?createDatabaseIfNotExist=true&useSSL=true
-spring.datasource.username = root
-spring.datasource.password = root
+spring.datasource.url = jdbc:mysql://biufsqqbxxoyhkj9p7er-mysql.services.clever-cloud.com:3306/biufsqqbxxoyhkj9p7er?createDatabaseIfNotExist=true&useSSL=true
+spring.datasource.username = ullwmibyrt2ewznf
+spring.datasource.password = GFCPrVU6WH6rF9V3alGE
 
 
 # = Keep the connection alive if idle for a long time
