--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.datasource.url = jdbc:mysql://biufsqqbxxoyhkj9p7er-mysql.services.clever-
 spring.datasource.username = ullwmibyrt2ewznf
 spring.datasource.password = GFCPrVU6WH6rF9V3alGE
 
+server.port=${PORT:8080}
 
 # = Keep the connection alive if idle for a long time
 spring.datasource.testWhileIdle = true
